# CppPlayground

./: .gitignore  README.md
.devcontainer/: devcontainer.json
source/: forwardDeclarations.cpp  variableAssignmentAndInit.cpp  whichCppLangAmI
taggleos/: BUILD_README.md  CMakeLists.txt  INSTALL_GUIDE.md  QUICK_START.md  README.md  build.ps1  build_qmake.ps1  run.ps1  taggleos.pro
taggleos/src/: datastore.cpp  datastore.h  main.cpp  mainwindow.cpp  mainwindow.h  tagmanager.cpp  tagmanager.h
taggleos/src/models/: data.cpp  data.h  tag.cpp  tag.h
taggleos/src/widgets/: searchwidget.cpp  searchwidget.h  tagwidget.cpp  tagwidget.h
